<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".SignUpActivity"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="70dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:paddingBottom="5dp"
                android:text="@string/signUp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingTop="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/edTextlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:paddingBottom="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingTop="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/edTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingBottom="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingTop="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/edTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:password="false" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingTop="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/edTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/user_email"
                android:inputType="textPersonName"
                android:paddingBottom="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:onClick="onClickSignUp"
                android:paddingBottom="5dp"
                android:text="Зарегистрироваться"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>