<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".SignInAct"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="70dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="cursive"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Авторизация"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"

                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:textColorHighlight="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/gray"
                android:backgroundTint="@color/gray"
                android:textColor="@color/yellow"
                android:textColorHighlight="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:onClick="onClickEnter"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:onClick="onClickSignUpFormOp"
                android:text="@string/signUp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <Button
                android:id="@+id/buttonChek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:onClick="onClickChek"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </TableRow>

    </TableLayout>
</RelativeLayout>
